<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView android:textAppearance="?android:attr/textAppearanceLarge"
              android:layout_width="wrap_content"
              android:layout_marginTop="10dp"
              android:id="@+id/tvListname"
              android:layout_height="wrap_content"
              android:text="@string/listname" />
    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="10dp"
              android:singleLine="true"
              android:id="@+id/etListname" />
    <TextView android:textAppearance="?android:attr/textAppearanceLarge"
              android:layout_width="wrap_content"
              android:id="@+id/tvFilePath"
              android:layout_height="wrap_content"
              android:text="@string/filePath" />
    <RelativeLayout android:layout_width="match_parent"
    				android:layout_height="wrap_content"
    				android:layout_marginBottom="10dp">
        <EditText android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:id="@+id/etFilePath"
                  android:singleLine="true"
                  android:layout_alignParentTop="true"
                  android:layout_alignParentLeft="true"
                  android:layout_toLeftOf="@+id/btSearchFile" />
        <Button android:layout_height="wrap_content"
                android:layout_width="wrap_content"
        		android:id="@+id/btSearchFile"
        		android:text="@string/search"
        		android:layout_alignParentTop="true"
        		android:layout_alignParentRight="true" />
    </RelativeLayout>
    <TextView android:textAppearance="?android:attr/textAppearanceLarge"
              android:layout_width="wrap_content"
              android:id="@+id/tvMountPath"
              android:layout_height="wrap_content"
              android:text="@string/mountPath" />
    <RelativeLayout android:layout_width="match_parent"
    				android:layout_height="wrap_content"
    				android:layout_marginBottom="10dp">
        <EditText android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:id="@+id/etMountPath"
                  android:singleLine="true"
                  android:layout_alignParentTop="true"
                  android:layout_alignParentLeft="true"
                  android:layout_toLeftOf="@+id/btSearchDir" />
        <Button android:layout_height="wrap_content"
                android:layout_width="wrap_content"
        		android:id="@+id/btSearchDir"
        		android:text="@string/search"
        		android:layout_alignParentTop="true"
        		android:layout_alignParentRight="true" />
    </RelativeLayout>
	<RelativeLayout android:layout_height="fill_parent"
					android:layout_width="match_parent">
	<Button android:text="@string/ok"
	        android:id="@+id/btOk"
	        android:width="100dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginBottom="10dp"
	        android:layout_alignParentBottom="true"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	<Button android:text="@string/cancel"
	        android:id="@+id/btCancel"
	        android:width="100dp"
	        android:layout_marginRight="10dp"
	        android:layout_marginBottom="10dp"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentBottom="true"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	</RelativeLayout>
</LinearLayout>